--- a/mysql/docker-compose.mysql.yml
+++ b/mysql/docker-compose.mysql.yml
@@ -11,7 +11,8 @@ services:
       - mysqldb-volume:/var/lib/mysql
       #- ./conf/my.cnf:/etc/mysql/my.cnf:ro
       - ./conf/init.sql:/docker-entrypoint-initdb.d/init-01.sql
-      - ./conf/data.sql:/docker-entrypoint-initdb.d/init-02.sql
+      - ./conf/spring_batch.sql:/docker-entrypoint-initdb.d/init-02.sql
+      - ./conf/data.sql:/docker-entrypoint-initdb.d/init-03.sql
     env_file:
       - ./conf/mysql-vars.env
 
